--- a/mae281a_lec06.tex
+++ b/mae281a_lec06.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\mainmatter
+\mainmatter%
 \setcounter{page}{1}
 
 \lectureseries[\course]{\course}
@@ -10,7 +10,7 @@
 \renewcommand{\scribe}{Thomas Denewiler}
 \date{January 21, 2010}
 
-\setaddress
+\setaddress%
 
 % the following hack starts the lecture numbering at 1
 \setcounter{lecture}{5}
@@ -44,7 +44,7 @@ $$\dot{S}(t) = A(t,\lambda_0)S(t) + B(t,\lambda_0), \qquad S(t_0) = 0$$
 
 We need a solution of $\dot{x}=f(t,x,\lambda_0)$ to compute $S(t)$ with $S(t_0)=0$. To get there we take a Taylor's series expansion about $\lambda_0$ and find
 $$x(t,\lambda) \approx x(t,\lambda_0) + S(t)(\lambda-\lambda_0)$$
-This is only a valid approximation over a small range of $\lambda-\lambda_0)$.
+This is only a valid approximation over a small range of $\lambda-\lambda_0$.
 
 \section{Comparision Principle}
 This corresponds to Chapter 3.4 of Khalil. We are looking at differential inequalities such that
