--- a/mae281a_lec07.tex
+++ b/mae281a_lec07.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\mainmatter
+\mainmatter%
 \setcounter{page}{1}
 
 \lectureseries[\course]{\course}
@@ -8,7 +8,7 @@
 \auth[\lecAuth]{Lecturer: \lecAuth\\ Scribe: \scribe}
 \date{January 26, 2010}
 
-\setaddress
+\setaddress%
 
 % the following hack starts the lecture numbering at 1
 \setcounter{lecture}{6}
@@ -20,42 +20,42 @@
 \begin{definition}
 The equilibrium point $x=0$ of $\dot{x}=f(x)$ is:
 \begin{itemize}
-\item \textit{stable} if $\forall \epsilon > 0 ~ \exists ~ \delta=\delta(\epsilon)>0$ such that
+\item \textit{stable} if $\forall \epsilon > 0~\exists~\delta=\delta(\epsilon)>0$ such that
 \begin{align*}
 |x(0)| < \delta \Rightarrow |x(t)| < \epsilon, \forall t\geq0,
 \end{align*}
-This means that the solution is bounded for any initial condition as in Figure \ref{fig:07stableEqPoint}.
+This means that the solution is bounded for any initial condition as in Figure~\ref{fig:07stableEqPoint}.
 \item \textit{unstable} if the equilibrium point is not stable,
 \item \textit{attractive} if there exists $\delta>0$ such that if $|x(0)|<\delta$ then
 \begin{align*}
 \lim_{t\to\infty}x(t) = 0,
 \end{align*}
-Attractiveness does not concern the rate of convergence or even stability of the system to the equilibrium point. Note that it is difficult to describe a real physical system that is attractive but not stable, however mathtematically it must be considered. See Figure \ref{fig:07attractiveNotStable} for an example of a system that is attractive but not stable.
+Attractiveness does not concern the rate of convergence or even stability of the system to the equilibrium point. Note that it is difficult to describe a real physical system that is attractive but not stable, however mathtematically it must be considered. See Figure~\ref{fig:07attractiveNotStable} for an example of a system that is attractive but not stable.
 \item \textit{asymptotically stable} (a.s) if the equilibrium point is stable and attractive,
 \item \textit{globally asymptotically stable} (g.a.s.) if the equilibrium point is a.s. $\forall x_0\in\mathbb{R}^n$.
 \end{itemize}
 \end{definition}
 
 \begin{figure}[ht!]
-	\centering
-	\includegraphics[width=.4\textwidth]{images/07stableEqPoint}
-	\caption{Stable equilibrium point.}
-	\label{fig:07stableEqPoint}
+\centering
+\includegraphics[width=.4\textwidth]{images/07stableEqPoint}
+\caption{Stable equilibrium point.}
+\label{fig:07stableEqPoint}
 \end{figure}
 
 \begin{definition}
 Consider the system $\dot{x}=f(x)$ and a scalar valued $V(x)$. Then
 \begin{align*}
-\dot{V}(x) = \sum_{i=1}^n \frac{\partial V}{\partial x_i} f_i(x) = \frac{\partial V}{\partial x}f = \nabla V^Tf = L_fV
+\dot{V}(x) = \sum_{i=1}^n \frac{\partial V}{\partial x_i} f_i(x) = \frac{\partial V}{\partial x}f = \nabla V^T f = L_f V
 \end{align*}
 where $L$ is the Lie or directional derivative.
 \end{definition}
 
 \begin{figure}[ht!]
-	\centering
-	\includegraphics[width=.4\textwidth]{images/07attractiveNotStable}
-	\caption{Stable equilibrium point.}
-	\label{fig:07attractiveNotStable}
+\centering
+\includegraphics[width=.4\textwidth]{images/07attractiveNotStable}
+\caption{Stable equilibrium point.}
+\label{fig:07attractiveNotStable}
 \end{figure}
 
 \begin{theorem}{Lyapunov Stability}
