--- a/mae281a_lec09.tex
+++ b/mae281a_lec09.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\mainmatter
+\mainmatter%
 \setcounter{page}{1}
 
 \lectureseries[\course]{\course}
@@ -8,7 +8,7 @@
 \auth[\lecAuth]{Lecturer: \lecAuth\\ Scribe: \scribe}
 \date{February 2, 2010}
 
-\setaddress
+\setaddress%
 
 % the following hack starts the lecture numbering at 1
 \setcounter{lecture}{8}
@@ -17,7 +17,10 @@
 \lecture{Quadratic Forms \& Attraction}
 
 \section{Quadratic Forms}
-Let $V(x)=x^TPx$. This gives $V$ pdf $\Leftrightarrow P>0 \Leftrightarrow \lambda(P)>0$ implying that the leading principal minors test of $P>0$. The leading principal minors test works well by hand for systems up to order $n=3$. For this type of quadratic system is $\dot{V}<0$? Consider $\dot{x}=Ax$ and see that $x=0$ is a.s. if and only if there exists $P=P^T$, $P>0$ such that $PA+A^TP<0$.
+Let $V(x)=x^T Px$.
+This gives $V$ pdf $\Leftrightarrow P>0 \Leftrightarrow \lambda(P)>0$ implying that the leading principal minors test of $P>0$.
+The leading principal minors test works well by hand for systems up to order $n=3$.
+For this type of quadratic system is $\dot{V}<0$? Consider $\dot{x}=Ax$ and see that $x=0$ is asymptotically stable if and only if there exists $P=P^T$, $P>0$ such that $PA+A^T P<0$.
 
 \begin{example}
 \begin{align*}
@@ -43,22 +46,24 @@ $\lozenge$
 \end{example}
 
 \section{Region of Attraction}
-Figure \ref{fig:09unstableLimitCycles} shows an unstable limit cycle with an equilibrium point at $x=0$. The interior of the limit cycle is the region of attraction.
+Figure~\ref{fig:09unstableLimitCycles} shows an unstable limit cycle with an equilibrium point at $x=0$.
+The interior of the limit cycle is the region of attraction.
 
 \begin{figure}[ht!]
-	\centering
-	\includegraphics[width=.4\textwidth]{images/09unstableLimitCycles}
-	\caption{Limit cycles.}
-	\label{fig:09unstableLimitCycles}
+\centering
+\includegraphics[width=.4\textwidth]{images/09unstableLimitCycles}
+\caption{Limit cycles.}
+\label{fig:09unstableLimitCycles}
 \end{figure}
 
-Figure \ref{fig:09threeEq} shows a system with three equilibria where $x=0$ is a stable equilibrium and the other two equilibria are unstable saddle points. The bold curves are known as \textit{separatrices} and the region of attraction (ROA) is located between those two curves.
+Figure~\ref{fig:09threeEq} shows a system with three equilibria where $x=0$ is a stable equilibrium and the other two equilibria are unstable saddle points.
+The bold curves are known as \textit{separatrices} and the region of attraction is located between those two curves.
 
 \begin{figure}[ht!]
-	\centering
-	\includegraphics[width=.4\textwidth]{images/09threeEq}
-	\caption{Three equilibria points.}
-	\label{fig:09threeEq}
+\centering
+\includegraphics[width=.4\textwidth]{images/09threeEq}
+\caption{Three equilibria points.}
+\label{fig:09threeEq}
 \end{figure}
 
 \begin{example}
@@ -69,39 +74,47 @@ Consider a pendulum with friction with dynamics given by
 \end{align*}
 For the Lyapunov function the total energy of the system can be used:
 \begin{align*}
-\dot{V}_1(x) = \underbrace{\tfrac{g}{l}(1-cos(x_1))}_{\text{potential}} + \underbrace{\tfrac{1}{2}x_2^2}_{\text{kinetic}}
+\dot{V}_1(x) = \underbrace{\tfrac{g}{l}(1-\cos(x_1))}_{\text{potential}} + \underbrace{\tfrac{1}{2}x_2^2}_{\text{kinetic}}
 \end{align*}
 \begin{itemize}
 \item Is $V_1(x)>0$? Yes.
-\item Is $\dot{V}_1(x)<0$? $\dot{V}_1(x) = -\tfrac{k}{m}x_2^2 \Rightarrow \dot{V}_1(x)\leq0$. Almost, only nsdf.
-\item $x_2=0$ when the pendulum is changing directions. Recall that Lyapunov stability theorem just says that systems are stable/a.s. but does not say that systems are unstable. Since we know that the system is a.s. and $V_1(x)$ does not show this we need to find a better candidate Lyapunov function.
+\item Is $\dot{V}_1(x)<0$? $\dot{V}_1(x) = -\tfrac{k}{m}x_2^2 \Rightarrow \dot{V}_1(x)\leq0$.
+      Almost, only negative semidefinite.
+\item $x_2=0$ when the pendulum is changing directions.
+      Recall that Lyapunov stability theorem just says that systems are stable/asymptotically stable but does not say that systems are unstable.
+      Since we know that the system is asymptotically stable and $V_1(x)$ does not show this we need to find a better candidate Lyapunov function.
 \end{itemize}
 
 \begin{figure}[ht!]
-	\centering
-	\includegraphics[width=.5\textwidth]{images/plot1minusCosX}
-	\caption{Pendulum.}
-	\label{fig:plot1minusCosX}
+\centering
+\includegraphics[width=.5\textwidth]{images/plot1minusCosX}
+\caption{Pendulum.}
+\label{fig:plot1minusCosX}
 \end{figure}
 
-Figure \ref{fig:plot1minusCosX} shows the function $f(x) = 1-\cos(x_1)$. The second Lyapunov function to try will be set up to take advantage of compeleting the squares.
+Figure~\ref{fig:plot1minusCosX} shows the function $f(x) = 1-\cos(x_1)$.
+The second Lyapunov function to try will be set up to take advantage of completing the squares.
 \begin{align*}
 V_2(x) &= V_1(x) + \tfrac{1}{2}\tfrac{k}{m}x_1x_2 + \tfrac{1}{4}\tfrac{k^2}{m^2}x_1^2 \\
-&= \tfrac{g}{l}(1-\cos(x_1)) + \underbrace{\tfrac{1}{4}x_2^2 + \tfrac{1}{4}(x_2+\tfrac{k}{m}x_1)^2}_{>0}
+       &= \tfrac{g}{l}(1-\cos(x_1)) + \underbrace{\tfrac{1}{4}x_2^2 + \tfrac{1}{4}{(x_2+\tfrac{k}{m}x_1)}^2}_{>0}
 \end{align*}
-This gives $V_2>0$ on $D=(-\pi,\pi)\times\mathbb{R}$. Evaluating the derivative shows that
+This gives $V_2>0$ on $D=(-\pi,\pi)\times\mathbb{R}$.
+Evaluating the derivative shows that
 \begin{align*}
 \dot{V}_2 = -\tfrac{1}{2}\tfrac{k}{m}x_2^2 - \tfrac{1}{2}\tfrac{g}{l}\tfrac{k}{m}x_1\sin(x_1) < 0
 \end{align*}
-on $D=(-\pi,\pi)\times\mathbb{R}$. Therefore $x=\left(\begin{array}{c} 0 \\ 0 \end{array}\right)$ is a.s. Now we want to look at the level sets that are generated by this system in Figure \ref{fig:09separatrix}. Note that the ellipse inside the separatrices is the largest level set of $V_2$ and that \textsc{Matlab} can be used to find the level sets.
+on $D=(-\pi,\pi)\times\mathbb{R}$.
+Therefore $x=\left(\begin{array}{c} 0 \\ 0 \end{array}\right)$ is asymptotically stable.
+Now we want to look at the level sets that are generated by this system in Figure~\ref{fig:09separatrix}.
+Note that the ellipse inside the separatrices is the largest level set of $V_2$ and that \textsc{Matlab} can be used to find the level sets.
 $\lozenge$
 \end{example}
 
 \begin{figure}[ht!]
-	\centering
-	\includegraphics[width=.5\textwidth]{images/09separatrix}
-	\caption{Pendulum.}
-	\label{fig:09separatrix}
+\centering
+\includegraphics[width=.5\textwidth]{images/09separatrix}
+\caption{Pendulum.}
+\label{fig:09separatrix}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
